[build-system]
requires = [ "setuptools>=68.0",]
build-backend = "setuptools.build_meta"

[project]
name = "healthcli"
version = "2.1.0"
description = "Simple local dead man's switch for cron jobs and scheduled tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

[project.scripts]
hccli = "healthcli.main:main"
